# link

./: .env.example  .gitignore  =13.0.0  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: ci.yml
agents/: config-template.yaml  example.yaml
agents/skills/system-query/: SKILL.md
docs/: media-r2-design.md  qwen-manual.md
docs/plans/: 2026-04-10-link-architecture-design.md
docs/superpowers/plans/: 2026-04-16-github-repo-setup.md
docs/superpowers/specs/: 2026-04-16-github-repo-setup-design.md  2026-04-16-link-r2-mobile-alignment-design.md
github-repo-setup/: SKILL.md
github-repo-setup/assets/: README-TEMPLATE.md  README_EN-TEMPLATE.md
github-repo-setup/references/: GITIGNORE-RULES.md
link/: __init__.py  agent.py  config.py  llm_engine.py  main.py  matrix_client.py  media_store.py  r2_protocol.py  safety.py  skills.py  tool_registry.py
link-tools/: README.md
link-tools/agents/: subhub.yaml
link-tools/agents/skills/manage-subscriptions/references/: domain-rules.md
link/tools/: __init__.py  api_tool.py  base.py  builtin.py  cli_tool.py  webhook.py
models/: _template.yaml  deepseek-v3.yaml  glm-4-plus.yaml  gpt-4o.yaml  qwen-plus.yaml  qwen-turbo.yaml
skill-creator/: SKILL.md
skill-creator/assets/: SKILL-TEMPLATE.md
skill-creator/references/: SPEC.md
tests/: test_agent_config.py  test_async_query_behavior.py  test_r2_protocol.py
